[package]
name = "rust_graphic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cgmath = "0.18.0"
env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
vulkano = "0.34.1"
vulkano-win = "0.34.0"
winit = "0.29.3"
